-===============================================================================
Change history for translation-utility
================================================================================

DONE:
********* version 1.02.00 (24619)
9/21/08 - comparison of SVN revision numbers in update feature was "remote != local", should be "remote > local" so that dev versions aren't confused
9/21/08 - workaround for problem with "Test" feature, couldn't find manifest in Offline JAR files after they had been modified by deploy-translation task
********* version 1.01.00 (24616)
9/21/08 - fix version number, it was displaying 1.-1.00
9/5/08 - remove uses of DialogUtils, replace with JOptionPane
9/5/08 - improve validation code for InitializationDialog
9/5/08 - move error messages out of strings file and into InitializationDialog
8/27/08 - manually update and publish website files for 1.00.00 release
********* version 1.00.00 (23942)
8/27/08 - add missing jnlp.jar to proguard in buildfile, needed to open web browser by UpdateManager
8/27/08 - add hack to read common string files when project.name=common-strings
8/21/08 - inspect project.properties in JAR file to retrieve project.name; fallback to discovery algorithm
********* version 0.02.01 (23665)
8/12/08 - exclude the source language (English) from the choices for destination language
8/12/08 - look for English strings in project-strings_en.properties, then fallback to project-strings.properties if not found
8/12/08 - move constants to TUConstants
6/25/08 - change URL for translation utility homepage to reflect new website organization
6/25/08 - catch FileNotFoundException when looking for translation-utility.properties on server
6/16/08 - discover project name from jar files named curve-fit.jar or curve-fit_fr.jar
6/16/08 - wrap main in SwingUtility.invokeLater
6/16/08 - remove HTML file generation for Flash, handled dynamically by FlashLauncher
6/16/08 - cleanup JavaSimulation and FlashSimulation